# bidding_contract

./: Cargo.toml
src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
src/multitest/: tests.rs
